style.css
/* ... */
.profileFormWrapper .signUpLink {
  --singUpAW: 65px;
  position: absolute;
  clip-path: polygon(6% 0, 100% 0, 0 100%, 0 6%);
  opacity: 0;
  z-index: 1;
  width: var(--singUpAW);
  aspect-ratio: 1;
}


.profileForm {
  height: fit-content;
  margin-top: var(--size-400);
  display: grid;
  row-gap: 3rem;
}

.profileForm__inputs {
  text-align: left;
  font-size: 1rem !important;
  display: grid;
  gap: 2rem;
  grid-template-columns: 1fr;
}

.profileForm__inputs input {
  padding: var(--size-400);
  position: relative;
}

.profileForm__inputs div {
  display: grid;
  gap: 0.5rem;
  justify-self: center;
  width: 80%;
  margin-bottom: var(--size-400);
  position: relative;
}

.profileForm__inputs div label {
  padding-block: var(--size-100);
}

input[name="password"] + div::after {
  content: "";
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='gray'  viewBox='0 0 576 512'%3E%3C!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc. --%3E%3Cpath d='M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: center;
  aspect-ratio: 1;
}

input[name="password"] + div {
  position: absolute;
  bottom: 0;
  right: var(--size-100);
  aspect-ratio: 1;
  width: 25px;
  height: auto;
}

.profileFormWrapper,
.profileForm__btns,
.profileForm__saveToLocal {
  font-size: var(--fs-500) !important;
}

.profileForm__btns {
  display: flex;
  gap: var(--size-400);
  justify-content: center;
}
.profileForm__btns * {
  padding: var(--size-100);
}

.profileForm__saveToLocal {
  display: flex;
  gap: var(--size-400);
  flex-direction: column;
  align-items: center;
}

.profileForm__saveToLocal *,
.profileForm__btns * {
  font-size: var(--size-400);
}

.profileForm__btns * {
  width: 100%;
  text-transform: uppercase;
}

.profileForm__saveToLocal .btnOnCheckboxWrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

@media (max-width: 48em) {
  .profile {
    margin-top: var(--size-100);
  }

  .profileForm {
    row-gap: var(--size-500);
  }
  .profileForm__inputs div * {
    width: 100%;
    padding-block: var(--size-100);
    margin-bottom: -20px;
    margin-top: var(--size-100);
  }
}

@media (min-width: 48em) and (max-width: 64em) {
  .profileForm__saveToLocal {
    display: flex;
    gap: var(--size-100);
    flex-direction: column;
    align-items: center;
  }

  .nav h2 {
    padding-top: var(--size-300);
  }
}

.profileForm__saveToLocal *:first-child {
  display: flex;
  gap: var(--size-100);
}

.profileForm__saveToLocal input {
  transform: scale(1.5);
}

@keyframes warning {
  0% {
    outline-color: rgba(220, 20, 60, 0.5);
  }
  25% {
    outline-color: rgba(220, 20, 60, 1);
  }
  50% {
    outline-color: rgba(220, 20, 60, 0.5);
  }
  100% {
    outline-color: rgba(220, 20, 60, 1);
  }
}

/* Local storage saving check box */

.btnOnCheckbox {
  position: relative;
  width: 74px;
  height: 36px;
  left: 0;
  overflow: hidden;
  border-radius: var(--radius-normal);
}
.btnOnCheckboxToggler,
.btnOnCheckboxLayer {
  position: absolute;
  inset: 0;
}

.checkbox {
  position: relative;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  opacity: 0;
  cursor: pointer;
  z-index: 3;
}

.btnOnCheckboxToggler {
  z-index: 2;
}

.btnOnCheckboxLayer {
  width: 100%;
  background: #fcebeb;

  filter: var(--clr-light);
  transition: all ease 0.3s;
  z-index: 1;
}

.btnOnCheckboxToggler::before,
.btnOnCheckboxToggler::after,
.btnOnCheckboxToggler span {
  position: absolute;
  margin: 4px 0;
  width: 40%;
  left: 40px;
  height: 28px;
  font-size: var(--size-100);
  font-weight: bold;
  transition: all ease 0.3s;
  border-radius: var(--radius-normal);
  display: grid;
  place-items: center;
}

.btnOnCheckboxToggler::before {
  content: "";
  left: 4px;
  background: #f44336;
}

.btnOnCheckboxToggler::after {
  content: "YES";
  right: 4px;
  color: #4e4e4e;
}

.btnOnCheckboxToggler span {
  color: #fff;
  z-index: 1;
  left: 8px;
}

.checkbox:checked + .btnOnCheckboxToggler span {
  color: #4e4e4e;
}

.checkbox:checked + .btnOnCheckboxToggler::before {
  left: 40px;

  background: var(--clr-quote-header);
}

.checkbox:checked + .btnOnCheckboxToggler::after {
  color: #fff;
}

.checkbox:checked ~ .btnOnCheckboxLayer {
  background-color: var(--clr-white-50);
}

/* main nav */
.mainNav {
  display: none;
}

.nav svg {
  width: calc(var(--size-100) * 2.5);
  fill: var(--clr-accent);
}

.nav h2 {
  display: flex;
  justify-content: space-between;
}

.mainNav li {
  position: relative;
}

.mainNav li::after {
  content: "";
  margin-right: var(--size-200);
  display: inline-block;
  margin-left: var(--size-200);
  border-width: 5px;
  border-style: solid;
  border-color: #444 transparent transparent transparent;
}

.mainNav > li {
  padding: calc(var(--size-100) - 5px);
  text-indent: var(--size-100);
  border-radius: var(--radius-normal);
  font-weight: 300;
  font-size: 1.25rem;
  border-bottom: 1px solid var(--clr-light);
  color: var(--clr-text);
  box-shadow: 0 1px 1px 0 var(--clr-text);
}
/* ... */

